kubernetes/app-deployment.yaml
# define a service to deliver
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: default
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
      app: my-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: default
  labels:
    app: my-app
spec:
  revisionHistoryLimit: 2
  selector: 
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: 315528473023.dkr.ecr.eu-west-2.amazonaws.com/myapp:latest
          ports:
            - containerPort: 8080
